2007-01-06 [colin]	2.6.1cvs113

	* src/etpan/imap-thread.c
		Add casts to int to get certs. Fixes
		bug 1064, 'crash @ etpan_certificate_check() 
		when opening an IMAP folder', with latest
		libetpan CVS or >= 0.49
	* src/mainwindow.c
	* src/mainwindow.h
	* src/imap_gtk.c
	* src/news_gtk.c
	* src/prefs_folder_item.c
		Grey out the "synchronise" menu items if
		there's nothing to synchronise.
	* src/plugins/pgpcore/sgpgme.c
		Make an error clearer than "Unknown error"

2007-01-06 [colin]	2.6.1cvs112

	* src/messageview.c
		Don't try to show a message if updating
		Maybe fixes bug 1088, 'ctrl-h produces
		repeatable crash'.

2007-01-06 [colin]	2.6.1cvs111

	* src/summaryview.c
		Disable Control-Space (handle it as Space).

2007-01-05 [paul]	2.6.1cvs110

	* src/imap.c
		Fix bug 934, 'sylpheed claws 2.1 
		doesn't show Exchanges Public Folders'
		Thanks to Hoa and Colin
	* src/msgcache.c
		Refuse to allocate more than 2 MB for a 
		single field, it's a good indication of
		cache corruption.

2007-01-05 [colin]	2.6.1cvs109

	* src/mainwindow.c
		Allow --select'ing emails by Message-ID too

2007-01-05 [colin]	2.6.1cvs108

	* src/common/quoted-printable.c
		Uh! Third fix :)

2007-01-05 [colin]	2.6.1cvs107

	* src/common/quoted-printable.c
		Fix previous commit about bug 1089
		Thanks to Ralf

2007-01-05 [colin]	2.6.1cvs106

	* src/common/quoted-printable.c
		Fix my previous commit on bug 1089
		- Thanks to Ralf :)

2007-01-04 [colin]	2.6.1cvs105

	* src/common/quoted-printable.c
		Fix bug 1089, 'NUL characters in Subject 
		line are misinterpreted'. Not a pain to
		fix in fact.

2007-01-04 [colin]	

	2.7.0-rc3 released

2007-01-04 [wwp]	2.6.1cvs104

	* src/image_viewer.c
		Force operator precedence (fix a compiler warning).

2007-01-04 [colin]	2.6.1cvs103

	* src/image_viewer.c
		Be cautious there too (same fix as the one
		in textview from cvs33)
	* src/messageview.c
		Don't use any MimeViewer plugin when showing
		all headers

2007-01-03 [wwp]	2.6.1cvs102
