@@ -1,3 +1,9 @@
+2007-01-07 [colin]	2.6.1cvs114
+
+	* src/messageview.c
+		Fix bug 1088, 'Ctrl-h produces repeatable
+		crash'
+
 2007-01-06 [colin]	2.6.1cvs113
 
 	* src/etpan/imap-thread.c
